meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/Meta_Ad_Analytics__c.object-meta.xml
<CustomObject>
    <label>Meta Ad Analytics</label>
    <pluralLabel>Meta Ad Analytics</pluralLabel>
    <nameField>
        <displayFormat>MAA-{000000}</displayFormat>
        <label>Ad Analytics Record</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>