meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/fields/Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name__c</fullName>
    <label>Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>