meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>