meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>