meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <label>Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>