meta-lead-ads-package/main/default/objects/Meta_Ad_Analytics__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>